# rust_react_authentication_app

./: README.md
frontend/src/: App.css  App.jsx
server/: .env.example  Cargo.toml
server/migrations/: 20250115000001_create_users_table.sql
server/src/: main.rs
